<resources>
    <string name="app_name">AndroidCurso1</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="edad">Edad</string>
    <string name="result">Tu Resultado</string>


    <string name="error">Error!</string>

    <string name="title_bajo_peso">Bajo Peso</string>
    <string name="description_bajo_peso">Estas por debajo de lo óptimo para tu peso y altura</string>

    <string name="title_peso_normal">Normal</string>
    <string name="description_peso_normal">Estas en el peso correcto</string>

    <string name="title_sobre_peso">Sobre Peso</string>
    <string name="description_sobre_peso">Estas por encima de lo óptimo para tu peso y altura</string>

    <string name="title_obecidad">Obesidad</string>
    <string name="description_obecidad">Estas muy por encima de lo óptimo para tu peso y altura</string>


    <string name="bienvenidos">Bienvenido, Nahum</string>
    <string name="categorias">categorias</string>
    <string name="task">tareas</string>
    <string name="añadir">Añade una tarea</string>
    <string name="negocio">Negocio</string>
    <string name="personal">Personal</string>
    <string name="otros">Otros</string>
    <string name="tarea">crear tarea</string>
</resources>