<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/todo_background_todo_app"
        tools:context=".toDoApp.ToDoActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:text="@string/bienvenidos"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="18dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/categorias"
            android:textAllCaps="true"
            android:layout_marginHorizontal="32dp"
            android:textColor="@color/title_text"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategorias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/task"
            android:textAllCaps="true"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="20dp"
            android:textColor="@color/title_text"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        app:tint="@color/white"
        app:backgroundTint="@color/todo_accent"
        android:src="@drawable/add_icon"
        android:layout_gravity="end|bottom"
        />
</FrameLayout>
